Fix Table 4: add top/bottom padding in cells and row spacing before hlines

--- a/paper.tex
+++ b/paper.tex
@@ -691,110 +691,134 @@ While the previous discussion focused on canonical exploration strategies that a
         Selects the best-known action with probability \(1 - \epsilon\) and explores randomly with probability \(\epsilon\). & 
         \begin{minipage}[t]{\linewidth}
             \raggedright
+            \vspace{3pt}
             \begin{itemize}[leftmargin=*, topsep=0pt, itemsep=0pt, parsep=0pt, partopsep=0pt]
                 \item Simple to implement
                 \item Low computational cost
                 \item Easy to understand
             \end{itemize}
+            \vspace{4pt}
         \end{minipage}
         & 
         \begin{minipage}[t]{\linewidth}
             \raggedright
+            \vspace{3pt}
             \begin{itemize}[leftmargin=*, topsep=0pt, itemsep=0pt, parsep=0pt, partopsep=0pt]
                 \item Fixed exploration rate
                 \item Might miss better actions
                 \item Not adaptive to context
             \end{itemize}
+            \vspace{4pt}
         \end{minipage}
         & 
         \begin{minipage}[t]{\linewidth}
             \raggedright
+            \vspace{3pt}
             \begin{itemize}[leftmargin=*, topsep=0pt, itemsep=0pt, parsep=0pt, partopsep=0pt]
                 \item Simple, static environments
                 \item Prioritize computational efficiency
             \end{itemize}
-        \end{minipage} \\ 
+            \vspace{4pt}
+        \end{minipage} \\[2pt]
         \hline
         Upper Confidence Bound (UCB) & 
         Selects actions based on confidence intervals combining reward estimates and uncertainty. & 
         \begin{minipage}[t]{\linewidth}
             \raggedright
+            \vspace{3pt}
             \begin{itemize}[leftmargin=*, topsep=0pt, itemsep=0pt, parsep=0pt, partopsep=0pt]
                 \item Systematic exploration
                 \item Minimizes long-term regret
                 \item Strong theoretical foundations
             \end{itemize}
+            \vspace{4pt}
         \end{minipage}
         & 
         \begin{minipage}[t]{\linewidth}
             \raggedright
+            \vspace{3pt}
             \begin{itemize}[leftmargin=*, topsep=0pt, itemsep=0pt, parsep=0pt, partopsep=0pt]
                 \item May overexplore uncertain actions
                 \item Higher computational complexity
             \end{itemize}
+            \vspace{4pt}
         \end{minipage}
         & 
         \begin{minipage}[t]{\linewidth}
             \raggedright
+            \vspace{3pt}
             \begin{itemize}[leftmargin=*, topsep=0pt, itemsep=0pt, parsep=0pt, partopsep=0pt]
                 \item Real-time ad placement
                 \item Long-term optimization
             \end{itemize}
-        \end{minipage} \\ 
+            \vspace{4pt}
+        \end{minipage} \\[2pt]
         \hline
         Regret Confidence Bounds (RegCB) & 
         Extends UCB by using regression oracles to compute confidence intervals based on contextual features. & 
         \begin{minipage}[t]{\linewidth}
             \raggedright
+            \vspace{3pt}
             \begin{itemize}[leftmargin=*, topsep=0pt, itemsep=0pt, parsep=0pt, partopsep=0pt]
                 \item Handles high-dimensional, sparse data
                 \item More accurate reward estimates
                 \item Well-suited for complex environments
             \end{itemize}
+            \vspace{4pt}
         \end{minipage}
         & 
         \begin{minipage}[t]{\linewidth}
             \raggedright
+            \vspace{3pt}
             \begin{itemize}[leftmargin=*, topsep=0pt, itemsep=0pt, parsep=0pt, partopsep=0pt]
                 \item High computational cost
                 \item Difficult to scale
             \end{itemize}
+            \vspace{4pt}
         \end{minipage}
         & 
         \begin{minipage}[t]{\linewidth}
             \raggedright
+            \vspace{3pt}
             \begin{itemize}[leftmargin=*, topsep=0pt, itemsep=0pt, parsep=0pt, partopsep=0pt]
                 \item High-dimensional environments
                 \item Needs precise reward prediction
             \end{itemize}
-        \end{minipage} \\ 
+            \vspace{4pt}
+        \end{minipage} \\[2pt]
         \hline
         Thompson Sampling (TS) & 
         Uses Bayesian sampling from posterior distributions to estimate optimal actions. & 
         \begin{minipage}[t]{\linewidth}
             \raggedright
+            \vspace{3pt}
             \begin{itemize}[leftmargin=*, topsep=0pt, itemsep=0pt, parsep=0pt, partopsep=0pt]
                 \item Adapts quickly to new data
                 \item Naturally balances exploration
                 \item Effective for cold-start problems
             \end{itemize}
+            \vspace{4pt}
         \end{minipage}
         & 
         \begin{minipage}[t]{\linewidth}
             \raggedright
+            \vspace{3pt}
             \begin{itemize}[leftmargin=*, topsep=0pt, itemsep=0pt, parsep=0pt, partopsep=0pt]
                 \item Can exhibit high variance
                 \item Moderate computational complexity
             \end{itemize}
+            \vspace{4pt}
         \end{minipage}
         & 
         \begin{minipage}[t]{\linewidth}
             \raggedright
+            \vspace{3pt}
             \begin{itemize}[leftmargin=*, topsep=0pt, itemsep=0pt, parsep=0pt, partopsep=0pt]
                 \item Cold-start and sparse data
                 \item Dynamic, shifting environments
             \end{itemize}
-        \end{minipage} \\ 
+            \vspace{4pt}
+        \end{minipage} \\[2pt]
         \hline
     \end{tabular}
     \end{adjustbox}
